@@ -69,7 +69,7 @@ const app = new Vue({
         trends_names : [],
         reports : wing.object_list({
             list_api : '/api/trendsreport',
-            params : {_items_per_page : 100, _order_by : 'name'},
+            params : {_items_per_page : 100, _order_by : 'name', _include : ['this','that'], _test : {x : 1, y : 2}},
             create_api : '/api/trendsreport',
             on_delete : function() {
                 app.$data.current_report = null;
